--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    
+    "antd": "^4.19.5",
     "next": "12.1.4",
+    "next-auth": "^4.3.1",
     "react": "18.0.0",
     "react-dom": "18.0.0"
+ 
   },
   "devDependencies": {
     "@types/node": "17.0.23",
